--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "engines": {
+        "node": "18.x"
+    },
     "scripts": {
         "watch": "node-sass --watch src/resources/scss/ --output src/public/css/",
-        "start": "nodemon index.js",
+        "start": "nod index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
