--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
         "husky": "^8.0.2",
         "node-sass": "^7.0.1",
         "nodemon": "^2.0.16",
-        "prettier": "2.8.1"
+        "prettier": "^2.8.1"
     }
 }
